--- a/tpga/resources/css/tpgwidget.css
+++ b/tpga/resources/css/tpgwidget.css
@@ -526,19 +526,20 @@ ul.parl ul {
     padding: 15px;
     padding-bottom: 0;
     margin-bottom: 2px;
+    margin-top: 0;
     font-size: 15px;
     font-weight: 100;
 }
 
 .card-vehicule .vehicle-icon {
     width: 100px;
-    float: left;
+    float: right;
 }
 
 .card-vehicule .wifi-icon {
     position: absolute;
     top: 4px;
-    right: 50px;
+    right: 100px;
 }
 
 .plan {
