--- a/tpga/resources/css/tpgwidget.css
+++ b/tpga/resources/css/tpgwidget.css
@@ -524,9 +524,10 @@ ul.parl ul {
 
 .card-vehicule h2 {
     padding: 15px;
+    padding-top: 2px;
     padding-bottom: 0;
-    margin-bottom: 2px;
     margin-top: 0;
+    margin-bottom: 2px;
     font-size: 15px;
     font-weight: 100;
 }
@@ -540,6 +541,13 @@ ul.parl ul {
     position: absolute;
     top: 4px;
     right: 100px;
+}
+
+.card-vehicule .id {
+    display: block;
+    padding-top: 2px;
+    padding-left: 10px;
+    color: rgba(0, 0, 0, .4);
 }
 
 .plan {
