Wi-Fi icon on departure

--- a/tpg/resources/css/tpgwidget.css
+++ b/tpg/resources/css/tpgwidget.css
@@ -368,6 +368,15 @@ span.perturbation::before {
     background: url(../img/no-pmr.svg);
 }
 
+.departure-wifi {
+    width: 30px;
+    margin-top: 3px;
+}
+
+.w .departure-wifi {
+    filter: invert();
+}
+
 .page-vehicule {
     background: #fff;
 }
@@ -433,6 +442,7 @@ span.perturbation::before {
     position: absolute;
     top: 4px;
     left: 100px;
+    opacity: .4;
 }
 
 .card-vehicule h2 {
@@ -471,6 +481,7 @@ span.perturbation::before {
     top: 20px;
     left: 10px;
     width: 50px;
+    opacity: .4;
 }
 
 .page-vehicule .card-wifi p {
