--- a/tpga/resources/css/tpgwidget.css
+++ b/tpga/resources/css/tpgwidget.css
@@ -206,6 +206,7 @@ i.icon.icon-arrivee {
 }
 
 .page-itineraire .list-block {
+    position: relative;
     margin: 0;
 }
 
@@ -686,6 +687,32 @@ ul.parl ul {
 
 .itineraire-dateheure .buttons-row {
     margin: 5px 14px;
+}
+
+.form-itineraire .autocomplete-opener {
+    padding-right: 60px;
+}
+
+.itineraire-invert {
+    position: absolute;
+    top: 24px;
+    right: 10px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+
+    border-radius: 50%;
+
+    z-index: 16;
+}
+
+.itineraire-invert svg {
+    fill: #fff;
+    transform: rotate(90deg);
+    pointer-events: none;
 }
 
 .page-trajets .card-header {
