--- a/tpg/resources/css/tpgwidget.css
+++ b/tpg/resources/css/tpgwidget.css
@@ -432,7 +432,8 @@ span.perturbation::before {
 }
 
 .card-vehicule .vehicle-icon {
-    width: 100px;
+    width: 90px;
+    margin-top: 5px;
     float: left;
 }
 
