--- a/tpga/resources/css/tpgwidget.css
+++ b/tpga/resources/css/tpgwidget.css
@@ -873,7 +873,7 @@ ul.parl ul {
     background: #00b0a4;
 }
 
-.l61,.l63,.lB,.lDN,.lM,.lO,.lT,.lD,.lF,.lG,.lK,.lY,.lZ,.departures li.lGplus::after{
+.l61,.l63,.lB,.lN,.lM,.lO,.lT,.lD,.lF,.lG,.lK,.lY,.lZ,.departures li.lGplus::after{
     background: #ff9baa;
 }
 
