--- a/tpg/resources/css/tpgwidget.css
+++ b/tpg/resources/css/tpgwidget.css
@@ -785,7 +785,7 @@ span.perturbation::before {
     background: #00b0a4;
 }
 
-.l61,.l63,.lB,.lDN,.lM,.lO,.lT,.lD,.lF,.lG,.lK,.lY,.lZ,.departures li.lGplus::after{
+.l61,.l63,.lB,.lN,.lM,.lO,.lT,.lD,.lF,.lG,.lK,.lY,.lZ,.departures li.lGplus::after{
     background: #ff9baa;
 }
 
