--- a/tpg/resources/css/tpgwidget.css
+++ b/tpg/resources/css/tpgwidget.css
@@ -373,8 +373,15 @@ span.perturbation::before {
     font-size: 20px;
     text-align: center;
     float: left;
-    margin-right: 10px;
-    font-family: "Helvetica Neue",Helvetica,sans-serif;
+    margin-right: 8px;
+    font-family: 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+.picto-ligne.lRE {
+    color: #CC0033;
+    background: #fff;
+    border: 1px solid #dedede;
+    font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue", Helvetica,sans-serif;
 }
 
 .perturbation-header header {
@@ -650,6 +657,12 @@ span.perturbation::before {
     background: #fff;
     border-top: 1px solid #c8c7cc;
     padding: 10px 0;
+}
+
+@supports(padding: max(0px)) {
+    .page-trajets .swiper-pagination {
+        padding-bottom: max(10px, env(safe-area-inset-bottom));
+    }
 }
 
 .page-trajets header {
