Improve train lines pictograms

--- a/tpg/resources/css/tpgwidget.css
+++ b/tpg/resources/css/tpgwidget.css
@@ -384,6 +384,10 @@ span.perturbation::before {
     font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue", Helvetica,sans-serif;
 }
 
+.picto-ligne-train {
+    border-radius: 5px;
+}
+
 .perturbation-header header {
     font-weight: 700;
 }
