--- a/tpga/resources/css/tpgwidget.css
+++ b/tpga/resources/css/tpgwidget.css
@@ -436,15 +436,6 @@ ul.parl ul {
     background: url(../img/no-pmr.svg);
 }
 
-.departure-wifi {
-    width: 30px;
-    margin-top: 3px;
-}
-
-.w .departure-wifi {
-    filter: invert(1);
-}
-
 /* About page */
 
 .page-about header {
@@ -578,46 +569,11 @@ ul.parl ul {
     float: right;
 }
 
-.card-vehicule .wifi-icon {
-    position: absolute;
-    top: 4px;
-    right: 100px;
-    opacity: .4;
-}
-
 .card-vehicule .id {
     display: block;
     padding-top: 2px;
     padding-left: 10px;
     color: rgba(0, 0, 0, .4);
-}
-
-.page-vehicule .card-wifi {
-    display: block;
-    color: inherit;
-    overflow: auto;
-    margin-top: 20px;
-    background: #fff;
-    padding: 10px;
-}
-
-.page-vehicule .card-wifi img {
-    position: absolute;
-    top: 20px;
-    left: 10px;
-    width: 50px;
-    opacity: .4;
-}
-
-.page-vehicule .card-wifi p {
-    padding-left: 65px;
-    padding-right: 10px;
-    line-height: 1.5;
-    color: #333;
-}
-
-.page-vehicule .card-wifi span {
-    color: #007aff;
 }
 
 .plan {
@@ -892,8 +848,7 @@ ul.parl ul {
         color: #fff;
     }
 
-    .card,
-    .page-vehicule .card-wifi {
+    .card {
         background-color: #2c2c2e;
     }
 
@@ -907,10 +862,6 @@ ul.parl ul {
         color: #fff;
     }
 
-    .page-vehicule .card-wifi {
-        color: #fff;
-    }
-
     .previous,
     .page-trajets .accordion-item {
         background-color: #1c1c1e;
@@ -920,7 +871,6 @@ ul.parl ul {
         background-color: transparent;
     }
 
-    .page-vehicule .card-wifi span,
     .card-vehicule .en-savoir-plus {
         color: #0080ff;
     }
@@ -949,8 +899,6 @@ ul.parl ul {
         background-color: #373739;
     }
 
-    .wifi-icon,
-    .page-vehicule .card-wifi img,
     .icon-marche {
         filter: invert(100%);
     }
